--- a/src/style.css
+++ b/src/style.css
@@ -42,3 +42,17 @@ body {
     display: flex;
     justify-content: space-evenly;
 }
+.p-listbox-filter {
+    color: #F8F5F0;
+    background: #F8F5F0;
+}
+
+.p-listbox-option-selected {
+    background-color: var(--primary-600) !important;
+    color: #ffffff !important;
+}
+
+.p-select-option.p-select-option-selected {
+    background-color: var(--primary-600) !important;
+    color: #ffffff !important;
+}
